--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -22,7 +22,8 @@ var data = [
 {% set contests = [
     ('earth', '#339966', '#45E695' ),
     ('monuments', '#8F0000', '#E62E2E' ),
-    ('africa', '#dc5757', '#E62E2E' ),
+    ('africa', '#DC5757', '#E62E2E' ),
+    ('public_art', '#004B71', '#ABE3FF' ),
 ] %}
 
 {% for name, bg_color_1, bg_color_2 in contests %}
