--- a/templates/eventmain.html
+++ b/templates/eventmain.html
@@ -31,6 +31,7 @@ var data = [
 <table style="text-align:center; border-collapse:collapse; min-width:500px; margin-top:8px">
     <tr>
         <th>Year</th>
+        <th>Countries</th>
         <th style="background-color:#{% if name == 'earth' %}339966{% else -%}
             8F0000{% endif %}; color:white">Uploads</th>
         <th style="background-color:#{% if name == 'earth' %}45E695{% else -%}
@@ -41,6 +42,7 @@ var data = [
     {% for year, d in data[name]|dictsort -%}
     <tr>
         <td><a href="{{ url_for('index') }}{{ name }}/{{ year }}">{{ year }}</a></td>
+        <td style="background-color:#F8F8F8">{{ d['country_count'] }}</td>
         <td style="background-color:#F8F8F8">{{ d['count'] }}</td>
         <td>{{ d['usage'] }} ({{ (100 * d['usage'] / d['count'] if d['count'] != 0 else 0)|int }}%)</td>
         <td style="background-color:#F8F8F8">{{ d['usercount'] }}</td>
