--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 Made with <a href="http://flask.pocoo.org/">Flask</a>
        </div>
        <div style="text-align:center; font-size:x-small; margin: 10px 10px 12px 181px">
-The <a href="https://github.com/ptwikis/wikiloves">source</a> of this tool is available under GNU General Public License 3.0 (GPL V3).
+The <a href="https://github.com/JeanFred/wikiloves">source</a> of this tool is available under GNU General Public License 3.0 (GPL V3).
        </div>
     </body>
 </html>
