Expose daily data on joiner count in the application
In 582a6fb4 we started collecting data on daily joiners.

This is now exposed on a new endpoint, `instance`.
It reuses the same route previously used by `users`,
which is moved to a new route `/users`.

Replace references throughout accordingly.

Bug: T203816

--- a/templates/eventmain.html
+++ b/templates/eventmain.html
@@ -66,10 +66,10 @@ var data = [
     </tr>
     {% for year, d in cdata|dictsort -%}
     <tr>
-        <td>{{ year }}</td>
+        <td><a href="{{ url_for('instance', name=name, year=year[-2:], country=country) }}">{{ year }}</td>
         <td style="background-color:#F8F8F8"><a href="{{ url_for('index') }}images?event={{ name }}&year={{ year }}&country={{ country }}">{{ d['count'] }}</a></td>
         <td>{{ d['usage'] }} ({{ (100 * d['usage'] / d['count'] if d['count'] != 0 else 0)|int }}%)</td>
-        <td style="background-color:#F8F8F8"><a href="/{{ name }}/{{ year }}/{{ country }}">{{ d['usercount'] }}</td>
+        <td style="background-color:#F8F8F8"><a href="{{ url_for('users', name=name, year=year[-2:], country=country) }} ">{{ d['usercount'] }}</td>
         <td>{{ d['userreg'] }} ({{ (100 * d['userreg'] / d['usercount'] if d['usercount'] != 0 else 0)|int }}%)</td>
     </tr>{% endfor %}
 </table><br/><br/>
