--- a/templates/country.html
+++ b/templates/country.html
@@ -37,7 +37,7 @@ var data = [
         <td><a href="{{ url_for('.index') }}{{ name }}/{{ year }}">{{ year }}</a></td>
         <td style="background-color:#F8F8F8"><a href="{{ url_for('index') }}images?event={{ name }}&year={{ year }}&country={{ country }}">{{ d['count'] }}</a></td>
         <td>{{ d['usage'] }} ({{ (100 * d['usage'] / d['count'] if d['count'] != 0 else 0)|int }}%)</td>
-        <td style="background-color:#F8F8F8"><a href="{{ url_for('.index') }}{{ name }}/{{ year }}/{{ country }}">{{ d['usercount'] }}</td>
+        <td style="background-color:#F8F8F8"><a href="{{ url_for('users', name=name, year=year[-2:], country=country) }} ">{{ d['usercount'] }}</td>
         <td>{{ d['userreg'] }} ({{ (100 * d['userreg'] / d['usercount'] if d['usercount'] != 0 else 0)|int }}%)</td>
     </tr>{% endfor %}
 </table><br/><br/>
