--- a/templates/instance.html
+++ b/templates/instance.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+<p><small>(All times are UTC.)</small></p>
+
 <table style="text-align:center; border-collapse:collapse; min-width:800px; margin-top:8px">
      <tr>
          <th>Date</th>
