Use get_event_name result in Jinja templates
The method get_event_name was extracted in 3953ebdc,
and used throughout the code base since - except in
some of the Jinja templates, where we were still
manually constructing event names.

Here we build a global mapping between scope slugs
and event names, that we pass to the Jinja template.

(Also rename some variables for consistency).

--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -27,7 +27,7 @@ var data = [
 ] %}
 
 {% for scope, bg_color_1, bg_color_2 in contests %}
-<h2>Wiki Loves {{ scope|replace("_", " ")|title }}</h2><hr/>
+<h2>{{ events_names[scope] }}</h2><hr/>
 {% include "contest_logo.html" %}
 <div id="graph-{{ scope }}"></div><br/>
 <table style="text-align:center; border-collapse:collapse; min-width:500px; margin-top:8px">
@@ -57,7 +57,7 @@ var data = [
     <tr>
         <th>Country</th>
         {% for scope, bg_color_1, _ in contests %}
-        <th style="background-color:{{ bg_color_1 }}; color:white">Wiki Loves {{ scope|replace("_", " ")|title }}</th>
+        <th style="background-color:{{ bg_color_1 }}; color:white">{{ events_names[scope] }}</th>
         {% endfor %}
     </tr>
     {%- for c, events in countries|dictsort %}
