--- a/templates/country.html
+++ b/templates/country.html
@@ -18,7 +18,7 @@ var data = [
 {% endblock %}
 {% block content %}
 {% for scope, series in data|dictsort %}
-<h2>Wiki Loves {{ scope|replace("_", " ")|title }}</h2><hr/>
+<h2>{{ events_names[scope] }}</h2><hr/>
 {% include "contest_logo.html" %}
 <div id="graph-{{ scope }}">
 </div>
