Link to Wikimedia Commons category from instance view
Handy link to easily navigate to Wikimedia Commons
from the instance view.

--- a/templates/instance.html
+++ b/templates/instance.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+<p><a href="https://commons.wikimedia.org/wiki/Category:{{ category_name }}">Category on Wikimedia Commons</a></p>
+
 <p><small>(All times are UTC.)</small></p>
 
 <table style="text-align:center; border-collapse:collapse; min-width:800px; margin-top:8px">
