Tool Labs -> Toolforge

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <div id="content-wrapper">
             <div id="menu">
 {#-###  MENU  ####}
-<img src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a4/Tool_labs_logo.svg/120px-Tool_labs_logo.svg.png">
+<img src="//upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Toolforge_logo.svg/120px-Toolforge_logo.svg.png">
                 <div id="menu-content">
 <div id="menu-item"><a href="{{ url_for('.index') }}">Main page</a></div>
 {%- for name, years in menu.items() %}
@@ -36,7 +36,7 @@
             <div id="content">
 <br/>
 <h1>{{ title }}</h1>
-<hr/> Tool Labs – Tools for Wiki Loves Photo Competitions <br/><br/>
+<hr/> Toolforge – Tools for Wiki Loves Photo Competitions <br/><br/>
 
 <div style="font-size:1.8em; font-weight:bold; color:gray; text-align:center">
 </div>
