Tool Labs -> Toolforge

--- a/templates/images.html
+++ b/templates/images.html
@@ -13,7 +13,7 @@
             <div id="image-content">
 <br/>
 <h1>{{ title }}</h1>
-<hr/> Tool Labs – Tools for Wiki Loves Photo Competitions <br/>
+<hr/> Toolforge – Tools for Wiki Loves Photo Competitions <br/>
 {%- if backto|length == 3 %}
 <p><a href="{{ url_for('index') }}{{ backto|join('/') }}">Back to Wiki Loves {{ backto[0]|replace("_", " ")|title }} {{ backto[1] }} {{ backto[2] }}</a></p>
 {%- else %}
