Use new favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
         <title>{{ title }}</title>
 
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='Tool_labs_logo.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='Toolforge_logo.ico') }}" />
         <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='style.css') }}" />
 {%- if rickshaw %}
         <link rel="stylesheet" href="{{ url_for('static', filename='rickshaw/rickshaw.min.css') }}">
